@@ -23,6 +23,7 @@ import static io.jenetics.stat.StatisticsAssert.assertDistribution;
 import static io.jenetics.util.RandomRegistry.using;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Random;
 
 import org.testng.Assert;
@@ -57,7 +58,7 @@ public class TruncationSelectorTest
 			final DoubleChromosome ch = DoubleChromosome.of(gene);
 			final Genotype<DoubleGene> gt = Genotype.of(ch);
 			final Phenotype<DoubleGene, Integer> pt = Phenotype.of(
-				gt, 1, gt.getGene().intValue()
+				gt, 1, gt.gene().intValue()
 			);
 
 			population.set(i, pt);
@@ -69,7 +70,7 @@ public class TruncationSelectorTest
 			selector.select(population.toISeq(), 10, Optimize.MINIMUM);
 
 		for (Phenotype<DoubleGene, Integer> pt : selected) {
-			Assert.assertTrue(pt.getFitness() < 5);
+			Assert.assertTrue(pt.fitness() < 5);
 		}
 	}
 
@@ -124,8 +125,8 @@ public class TruncationSelectorTest
 
 			printDistributions(
 				System.out,
-				Arrays.asList(""),
-				value -> new TruncationSelector<DoubleGene, Double>(),
+				List.of(""),
+				value -> new TruncationSelector<>(),
 				opt,
 				npopulation,
 				loops
